# pico-term-rs

./: CHANGELOG.md  README.md
.github/workflows/: build.yml  check.yml
core0/: Cargo.toml  README.md  build.rs  memory.x
core0/.cargo/: config.toml
core0/src/: hw.rs  main.rs
core0/src/vga/: font16.rs  font8.rs  mod.rs
core1/: Cargo.toml  README.md  build.rs  link.x  memory.x
core1/.cargo/: config.toml
core1/src/: main.rs
core1/src/vga/: font16.rs  font8.rs  mod.rs  rgb.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
