[package]
name = "core0"
version = "0.1.0"
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "The pico-term-rs Developers",
    "The Neotron Developers"
]
edition = "2021"
description = "Core0 Firmware for the RC2014 RP2024 VGA Terminal"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/thejpster/pico-term-rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "1.0.0" }
fugit = "0.3.7"
neotron-common-bios = "0.12.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl", "binary-info", "defmt", "rom-v2-intrinsics"] }
vte = "=0.12.1"

[profile.release]
debug = 2
opt-level = "s"
lto = "fat"
codegen-units = 1
