[package]
name = "xtask"
version = "0.1.0"
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "The pico-term-rs Developers",
    "The Neotron Developers"
]
edition = "2021"
description = "Build Tool for pico-term-rs"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/thejpster/pico-term-rs"

[dependencies]
